name: chat-store
version: 1.0.0
homepage: http://github.com/ocharles/engine.io
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
category: Web
build-type: Simple
cabal-version: >=1.10

Data-Dir: resources
Data-files:
  index.html
  main.js
  style.css

Executable chat-store
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    engine-io,
    yesod-core,
    yesod-static,
    yesod-persistent,
    engine-io-yesod,
    socket-io,
    stm,
    text,
    transformers,
    template-haskell,
    persistent,
    persistent-template,
    persistent-sqlite,
    resourcet,
    monad-logger,
    mtl
  main-is: Main.hs
  other-modules: Paths_chat_store
  ghc-options: -Wall -O2 -threaded
